--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "2.0.0-beta.10",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "2.0.0-beta.10",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "arrive": "2.4.1",
+    "bootstrap": "3.3.7",
+    "bootstrap-material-design":"0.5.10",
+    "bootstrap-notify":"3.1.3",
+    "chartist": "0.11.0",
     "core-js": "^2.4.1",
+    "jquery": "3.2.1",
+    "moment": "2.18.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
